--- a/templates/individual_post.html
+++ b/templates/individual_post.html
@@ -3,20 +3,14 @@
 
     <!-- Page Header -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=0.9">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{post.title}}">
-    <link rel="icon" href="static/img/vriddhi_logo.png">
+    <link rel="icon" href="static/img/vriddhi_logo.png" alt="vriddhi logo" />
     <meta name="author" content="">
-   
-    <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/Post.jpg') }}')">
-      <div class="overlay"></div>
-      <div class="container-image-fluid">
-       
+    
+    <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/post_page.jpg') }}')">
             <div class="site-heading">
               <h1>{{post.title}}</h1>
-          
-              
-             
             </div>
           </div>
         </div>
