--- a/templates/notfound.html
+++ b/templates/notfound.html
@@ -11,7 +11,7 @@
         404
         Page not found!!
     </div>
-    <div class="nfs">Sorry! This page i have not created. </div>
+    <div class="nfs">Sorry! I have not created this page. </div>
 </center>
     
 
