--- a/templates/search.html
+++ b/templates/search.html
@@ -1,73 +1,66 @@
-{% extends "layout.html" %}
-{% block body %}
-<br>
-<br>
-<br>
-    <body>
-      <link href="{{ url_for('static', filename='css/for_home.css') }}" rel="stylesheet">
-      <div class="animation"></div>
-    
-      <div class="container-waterflow">
-        <div class="waterflow">
-       
-        </div>
-        </div>
-       
-     
-       <h3>You thought of....  ||<span class="searched">{{searched}}</span></h3>  
-         
-  <hr>
-      <br>
-      <br>
-    
-   
-       
-      {% for post in posts %}
-    
-  
-      <div class="container-1">
-        <div class="csub-1" >
-            
-                 <div class="post-preview-1">
-                   <div id="username-1">
-                     <img  src="{{url_for('static', filename='img/i.png')}}" alt="" width="24" height="24" padding-top="10px">
-                     <a href="/user_account/{{post.user.id}}">{{post.user.username}}</a>•Joined on {{post.user.date}}
-                   </div>
-                   <a href="/individual_post/{{post.slug}}"|slugify|>
-                 <div class="post-title-1">{{ post.title }}
-   
-                 </div>
-                
-               </a>
-               <p class="post-meta-1">➔ Posted this
-                 <a href="#"></a>
-                 on {{post.date}}</p>
-             </div>
-             <div class="content-1">
-             {{post.content[0:470]}}...
-             </div>
-           <br>
-          
-          
-             </div> 
-             <hr>
-             </div>
-             
-             </div>
-            
-             
-   
-   
-   
-   
-          
+{% extends "layout.html" %} {% block body %}
+<br />
+<br />
+<br />
+<body>
+  <link
+    href="{{ url_for('static', filename='css/for_home.css') }}"
+    rel="stylesheet"
+  />
+  <div class="animation"></div>
 
+  <div class="container-waterflow">
+    <div class="waterflow"></div>
+  </div>
 
-  {% endfor %}
- 
-    <br>
-    <br>      
-     
-     
-    </body>
-    {% endblock %}
+  <h3>You searched...|| <span class="searched">{{searched}}</span></h3>
+  <br />
+  <hr style="color: black" />
+  <div id="testimonial-grid-container">
+    <div id="top">
+      {% for post in posts %} {% if loop.index % 2 == 0 %}
+      <div id="testimonial-1" class="grid-item">
+        <div id="username-1">
+          <img
+            src="{{url_for('static', filename='img/user_icon.png')}}"
+            alt="user-icon"
+            width="24"
+            height="24"
+          />
+          <a href="/user_account/{{post.user.id}}">{{post.user.username}}</a
+          >•posted this on {{post.date}}
+        </div>
+        <a href="/individual_post/{{post.slug}}" |slugify|>
+          <div class="post-title-1">{{ post.title }}</div>
+        </a>
+        <div class="content-1">{{post.content[0:350]}}...</div>
+        <hr />
+      </div>
+
+      {% else %}
+      <div id="testimonial-2" class="grid-item">
+        <div id="username-1">
+          <img
+            src="{{url_for('static', filename='img/user_icon.png')}}"
+            alt="user-icon"
+            width="24"
+            height="24"
+          />
+          <a href="/user_account/{{post.user.id}}">{{post.user.username}}</a
+          >•posted this on {{post.date}}
+        </div>
+        <a href="/individual_post/{{post.slug}}" |slugify|>
+          <div class="post-title-1">{{ post.title }}</div>
+        </a>
+        <div class="content-1">{{post.content[0:300]}}...</div>
+
+        <hr />
+      </div>
+
+      {% endif %} {% endfor %}
+    </div>
+  </div>
+</body>
+<br />
+<br />
+{% endblock %}
