--- a/templates/index.html
+++ b/templates/index.html
@@ -1,55 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-   
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=0.6, shrink-to-fit=no">
-   <meta http-equiv="expires" content="Tue, 01 Jan 2025 12:00:00 GMT">
-  <meta name="description" content="a platform to share communicate your ideas. Join live chat and share your opinions.
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=0.6, shrink-to-fit=no">
+<meta name="description" content="a platform to share, communicate your ideas. #Join live chat and share your opinions.
   A new world of communication is now open.">
-  <link rel="icon" href="static/img/vriddhi_logo.png">
-  <meta name="author" content="">
-  <title>Vriddhi</title>
+<meta http-equiv="expires" content="Tue, 01 Jan 2025 12:00:00 GMT">
+<link rel="icon" href="static/img/vriddhi_logo.png" alt="Vriddhi-logo">
+<meta name="author" content="">
+<title>Vriddhi</title>
 
-  <!-- Bootstrap core CSS -->
- 
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+  integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-  <!-- Custom fonts for this template -->
+<header class="masthead" id="photu"
+  style="background-image: url('{{ url_for('static', filename='img/intro_image.jpg') }}')" alt="white sheet">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
+    *,
+    body {
+      font-weight: 400;
+      -webkit-font-smoothing: antialiased;
 
+      -moz-osx-font-smoothing: grayscale;
+    }
 
-  <!-- Custom styles for this template -->
-  <link href="{{url_for('static', filename='css/for_intro.css')}}" rel="stylesheet">
+    html,
+    body {
+      height: 100%;
+      overflow: hidden;
+    }
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    #photu {
+      background: no-repeat;
+      background-color: #f6f4f4;
+      height: 100%;
+      width: 100%;
+      background-size: cover;
+    }
 
+    .intro {
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
+    .sub-container {
+      margin: 10px;
+      width: 800px;
+    }
 
+    .page-heading h1 {
+      font-size: clamp(80px, 5vw, 100px);
+      text-align: center;
+      font-weight: 800;
+      font-family: 'orbitron';
 
-  <header class="masthead" id="photu"style="background-image: url('{{ url_for('static', filename='img/into.jpg') }}')" >
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-6 mx-auto">
-          <div class="page-heading">
-            <h1>VR_iddH!</h1></div>
-            <div class="subheading">
-           
-            <span>Explore </span>
-         the new world of <span>infinite </span>possibilities with the people
-         you know and with those you will know later.
-          </br>
-          
-          <a class="btn btn-info"id='intro_but' href="/signin" role="button">Signin</a>
-        
-      <a class="btn btn-info" id="intro_but"href="/new_account" role="button">Create_account</a>
-              </div>
-           
-          </div>
-        </div>
+    }
+
+    .subheading {
+      text-align: center;
+      margin-top: 15%;
+      font-size: clamp(40px, 4vw, 50px);
+      font-weight: 500;
+      font-family: 'Rubik', Verdana;
+
+    }
+
+    #intro_but {
+      font-size: clamp(24px, 5vw, 28px);
+      font-weight: 800;
+      margin-top: 8%;
+      margin-left: 4%;
+      color: black;
+      background: linear-gradient(#ffc3a0, #ffafbd);
+      border-radius: 6px;
+    }
+
+    span {
+      color: #00B5Ec;
+      font-weight: 900;
+      font-family: 'orbitron';
+    }
+  </style>
+  <div class="intro">
+    <div class="sub-container">
+      <div class="page-heading">
+        <h1>VR_iddH!</h1>
+      </div>
+      <div class="subheading">
+        <span>Explore</span>
+        the new world of <span>infinite </span>possibilities with the people
+        you know and with those you will know later.
+        </br>
+        <a class="btn btn" id='intro_but' href="/signin" role="button">Signin</a>
+        <a class="btn btn" id="intro_but" href="/new_account" role="button">Create_account</a>
       </div>
     </div>
-  </header>
+  </div>
+</header>
 
- </html>  
-
- 
+</html>
