--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,175 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no">
-    <meta http-equiv="expires" content="Tue, 01 Jan 2025 12:00:00 GMT">
-    <meta name="description" content="a platform to share communicate your ideas. Join live chat and share your opinions.
-    A new world of communication is now open.">
-    <meta name="author" content="">
-    <link rel="icon" href="static/img/vriddhi_logo.png">
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 2025 12:00:00 GMT" />
+    <meta
+      name="description"
+      content="a platform to share communicate your ideas. #Join live chat and share your opinions.
+    A new world of communication is now open. #JOIN VRIDDHI"
+    />
+    <meta name="author" content="" />
+    <link rel="icon" href="static/img/vriddhi_logo.png" alt="vriddhi logo" />
     <title>Vriddhi</title>
-  
-    <!-- Custom fonts for this template -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    <link href="{{ url_for('static', filename='css/for_all_web.css') }}" rel="stylesheet">
-  
-  
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+
+    <link
+      href="{{ url_for('static', filename='css/for_all_web.css') }}"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
   </head>
-
   <body>
+    <div class="wrapper">
+      <nav>
+        <input type="checkbox" id="show-search" />
+        <input type="checkbox" id="show-menu" />
 
-
-    <!-- Navigation -->
- 
-    <!-- Page Header -->
-    <!DOCTYPE html>
-    <!-- Created By CodingNepal - www.codingnepalweb.com -->
-    <html lang="en">
-    <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title> Vriddhi</title>
-     
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    </head>
-    <body>
-      <div class="wrapper">
-        <nav>
-          <input type="checkbox" id="show-search">
-          <input type="checkbox" id="show-menu">
-          <label for="show-menu" class="menu-icon"><i class="fas fa-bars" id="menu"></i></label>
-          <div class="content">
+        <label for="show-menu" class="menu-icon"
+          ><i class="fas fa-bars" id="menu"></i
+        ></label>
+        <div class="content">
           <div class="logo">
-            <a >Vriddhi</a>
-            <img  src="{{url_for('static', filename='img/vriddhi_logo.png')}}" alt="" width="54" height="54" padding-bottom="30px">
+            <a>Vriddhi</a>
+            <img
+              id="logo"
+              src="{{url_for('static', filename='img/vriddhi_logo.png')}}"
+              alt="vriddhi-logo"
+              width="54"
+              height="54"
+            />
           </div>
-            <ul class="links">
-              
-              <li><a href="/home">Home</a></li>
-              <li><a href="/about_me">Purpose</a></li>
-              <li>
-                <a href="#" class="desktop-link">Explore</a>
-                <input type="checkbox" id="show-features">
-                <label for="show-features">Features</label>
-                <ul>
-                  <li><a href="https://google.com" target="_blank">Search Google</a></li>
-                  <li><a href="#">Something more</a></li>
-                
-                </ul>
-              </li>
-              <li>
-                <a href="/profile" >Profile</a>
-               
-                
-              </li>
-              <li><a href="/community">IN_dividuals</a></li>
-              <li id="logout"><a href="/logout">Logout</a></li>
-              <br>
-              
-              <div class="cube">
-                <div class="face front"></div>
-                <div class="face back"></div>
-                <div class="face right"></div>
-                <div class="face left"></div>
-                <div class="face top"></div>
-                <div class="face bottom"></div>
+          <ul class="links">
+            <div class="user-info">
+              <div class="user">{{current_user.username}}</div>
+              <div class="date">joined us on {{current_user.date}}</div>
+              <div class="email">email:{{current_user.email}}</div>
             </div>
-            </ul> 
-          </div>
-          <label for="show-search"  class="search-icon"><i class="fas fa-search" id="icon-s"></i></label>
-          <form method ="post"action="/searched" class="search-box">
-            <input type="text" name="q" placeholder=" Search..." required>
-            <button type="submit" class="go-icon"><i class="fas fa-long-arrow-alt-right"></i></button>
-          </form>
-        </nav>
-      </div>
-     
-    </body>
-    </html>
+            <hr />
 
-{% block body %} {% endblock %}
+            <div class="sub-links">
+              <div class="small-links">
+                <li><a href="/about_me">Purpose</a></li>
+                <li></li>
+                <li>
+                  <a href="https://google.com" target="_blank">Search Google</a>
+                </li>
+                <li><a href="#">Something more</a></li>
+              </div>
+              <div class="desk-links">
+                <li><a href="/home">Home</a></li>
+                <li><a href="/about_me">Purpose</a></li>
+                <li><a href="/add_post">Add_post</a></li>
+                <li><a href="/profile">Profile</a></li>
+                <li><a href="/community">IN_dividuals</a></li>
+                <li id="logout"><a href="/logout">Logout</a></li>
+              </div>
+            </div>
+            <div class="footer-nav">
+              <div class="copyright-nav">
+                @ 2023 The Individuals World ||
+                <a href="https://vriddhi.site/add_post">Vriddhi</a>
+              </div>
+              <div
+                class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end"
+                id="refbut-nav"
+              >
+                <!-- Facebook -->
+                <a
+                  class="btn btn-outline-light btn-floating m-1"
+                  class="text-white"
+                  id="f-links"
+                  role="button"
+                  ><i class="fab fa-facebook-f"></i
+                ></a>
 
+                <!-- Twitter -->
+                <a
+                  class="btn btn-outline-light btn-floating m-1"
+                  class="text-white"
+                  id="f-links"
+                  role="button"
+                  ><i class="fab fa-twitter"></i
+                ></a>
 
-    <!-- Footer -->
-    <!-- Remove the container if you want to extend the Footer to full width. -->
-    <footer>
-<div class="cont-footer" >
+                <!-- Google -->
+                <a
+                  href="https://google.com"
+                  class="btn btn-outline-light btn-floating m-1"
+                  class="text-white"
+                  id="f-links"
+                  role="button"
+                  ><i class="fab fa-google"></i
+                ></a>
 
-     
-
-      <!-- Section: Copyright -->
-      <section class="p-3 pt-0">
-        <div class="row d-flex align-items-center">
-          <!-- Grid column -->
-          <div class="col-md-7 col-lg-8 text-center text-md-start">
-            <!-- Copyright -->
-            <div class="copyright">
-              @ 2023 The Individuals World ||
-              <a class="text-white" href="https://vriddhi.site/add_post"
-                 >Vriddhi</a
-                >
-               
-            <!-- Copyright -->
-          </div>
-          <!-- Grid column -->
-         
-     </div>
-          <!-- Grid column -->
-          <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end" id="refbut">
-            <!-- Facebook -->
-            <a
-               class="btn btn-outline-light btn-floating m-1"
-               class="text-white"
-               role="button"
-               ><i class="fab fa-facebook-f"></i
-              ></a>
-
-            <!-- Twitter -->
-            <a
-               class="btn btn-outline-light btn-floating m-1"
-               class="text-white"
-               role="button"
-               ><i class="fab fa-twitter"></i
-              ></a>
-
-            <!-- Google -->
-            <a href="https://google.com"
-               class="btn btn-outline-light btn-floating m-1"
-               class="text-white"
-               role="button"
-               ><i class="fab fa-google"></i
-              ></a>
-
-            <!-- Instagram -->
-            <a
-               class="btn btn-outline-light btn-floating m-1"
-               class="text-white"
-               role="button"
-               ><i class="fab fa-instagram"></i
-              ></a>
-          </div>
-          <!-- Grid column -->
+                <!-- Instagram -->
+                <a
+                  class="btn btn-outline-light btn-floating m-1"
+                  class="text-white"
+                  id="f-links"
+                  role="button"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+              </div>
+            </div>
+          </ul>
         </div>
-      </section>
-      <!-- Section: Copyright -->
+        <label for="show-search" class="search-icon"
+          ><i class="fas fa-search" id="icon-s"></i
+        ></label>
+        <form method="post" action="/searched" class="search-box">
+          <input type="text" name="q" placeholder=" Search..." required />
+          <button type="submit" class="go-icon">
+            <i class="fas fa-long-arrow-alt-right"></i>
+          </button>
+        </form>
+      </nav>
     </div>
-    <!-- Grid container -->
-  </footer>
-  <!-- Footer -->
-</div>
+
+    {% block body %} {% endblock %}
+
+    <footer>
+      <div class="cont-footer">
+        <div class="copyright">
+          @ 2023 The Individuals World ||
+          <a href="https://vriddhi.site" target="_blank">Vriddhi</a>
+        </div>
+        <div
+          class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end"
+          id="refbut"
+        >
+          <!-- Facebook -->
+          <a
+            class="btn btn-outline-light btn-floating m-1"
+            class="text-white"
+            id="f-links"
+            role="button"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+
+          <!-- Twitter -->
+          <a
+            class="btn btn-outline-light btn-floating m-1"
+            class="text-white"
+            id="f-links"
+            role="button"
+            ><i class="fab fa-twitter"></i
+          ></a>
+
+          <!-- Google -->
+          <a
+            href="https://google.com"
+            class="btn btn-outline-light btn-floating m-1"
+            class="text-white"
+            id="f-links"
+            role="button"
+            ><i class="fab fa-google"></i
+          ></a>
+
+          <!-- Instagram -->
+          <a
+            class="btn btn-outline-light btn-floating m-1"
+            class="text-white"
+            id="f-links"
+            role="button"
+            ><i class="fab fa-instagram"></i
+          ></a>
+        </div>
+        <div class="bootstrap-icons">
+          <a href="/home"><i class="bi bi-house-fill" id="b-li"></i></a>
+          <a href="/profile"
+            ><i class="bi bi-person-bounding-box" id="b-li"></i
+          ></a>
+          <a href="/add_post"
+            ><i class="bi bi-cloud-plus-fill" id="b-li"></i
+          ></a>
+          <a href="/logout"
+            ><i class="bi bi-box-arrow-right" id="b-logout"></i
+          ></a>
+        </div>
+      </div>
+      <!-- Grid container -->
     </footer>
-
-    <!-- Bootstrap core JavaScript -->
-   
+    <!-- Footer -->
   </body>
-
 </html>
-
-
