--- a/templates/new_account.html
+++ b/templates/new_account.html
@@ -1,80 +1,112 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=0.75,maximum-scale=0.75, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="static/img/vriddhi_logo.png">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=0.75, shrink-to-fit=no"
+    />
+    <meta
+      name="description"
+      content="Create an account and start a new beggining on vriddhi"
+    />
+    <meta name="author" content="" />
+    <link rel="icon" href="static/img/vriddhi_logo.png" alt="Vriddhi logo" />
 
     <title>Start Your Journey</title>
-    
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <!-- Custom styles for this template -->
 
-
-  
-   
- <link href="{{url_for('static', filename='css/new_account.css')}}" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
+    <link
+      href="{{url_for('static', filename='css/signin.css')}}"
+      rel="stylesheet"
+    />
   </head>
- <body>
-  <div class="form-body">
-    <div class="row">
-        <div class="form-holder">
-            <div class="form-content">
-                <div class="form-items">
-                    <h3>Join the World of Curiosity</h3>
-                    <div class="illustration"><i class="icon ion-ios-locked-outline"></i></div>
-                    {% for message in get_flashed_messages() %}
-                    <div class="alert alert-dark" role="alert"id="alert">
-
-                     {{message}}
-                   </div>
-                   {% endfor %}
-                   <br>
-                    <form method="post" action="/new_account">
-
-                        <div class="col-md-12">
-                           <input class="form-control" type="text" name="username" placeholder="UserName (short)" required>
-                           <div class="valid-feedback">Username field is valid!</div>
-                           <div class="invalid-feedback">Username field cannot be blank!</div>
-                        </div>
-
-                        <div class="col-md-12">
-                            <input class="form-control" type="email" name="email" placeholder="Email" required>
-                             <div class="valid-feedback">Email field is valid!</div>
-                             <div class="invalid-feedback">Email field cannot be blank!</div>
-                        </div>
-
-                    
-
-
-                       <div class="col-md-12">
-                          <input class="form-control" type="password" name="password" placeholder="Make a 8-digit Password" required>
-                           <div class="valid-feedback">Password field is valid!</div>
-                           <div class="invalid-feedback">Password field cannot be blank!</div>
-                       </div>
-
-                       <div class="col-md-12">
-                        <input class="form-control" type="password" name="cpass" placeholder="Confirm Password" required>
-                         <div class="valid-feedback">Password field is valid!</div>
-                         <div class="invalid-feedback">Password field cannot be blank!</div>
-                     </div>
-
-                   
-              
-
-                        <div class="form-button mt-3">
-                            <button id="submit" type="submit" class="btn btn-primary">Register</button>
-                        </div>
-                    </form>
-                </div>
+  <body>
+    <div class="form-holder">
+      <div class="form-content-create">
+        <div class="form-items">
+          <h4>Join the World of Curiosity</h4>
+          <div class="door-icon">
+            <i class="bi bi-door-open-fill"></i>
+          </div>
+          {% for message in get_flashed_messages() %}
+          <div class="alert alert-dark" role="alert" id="alert-create">
+            {{message}}
+          </div>
+          {% endfor %}
+          <br />
+          <form method="post" action="/new_account">
+            <div class="col-md-12">
+              <input
+                class="form-control"
+                type="text"
+                name="username"
+                placeholder="UserName (short)"
+                required
+              />
+              <div class="valid-feedback">Username field is valid!</div>
+              <div class="invalid-feedback">
+                Username field cannot be blank!
+              </div>
             </div>
-        </div>
-    </div>
-</div>
 
- </body>
+            <div class="col-md-12">
+              <input
+                class="form-control"
+                type="email"
+                name="email"
+                placeholder="Email"
+                required
+              />
+              <div class="valid-feedback">Email field is valid!</div>
+              <div class="invalid-feedback">Email field cannot be blank!</div>
+            </div>
+
+            <div class="col-md-12">
+              <input
+                class="form-control"
+                type="password"
+                name="password"
+                placeholder="Make a 8-digit Password"
+                required
+              />
+              <div class="valid-feedback">Password field is valid!</div>
+              <div class="invalid-feedback">
+                Password field cannot be blank!
+              </div>
+            </div>
+
+            <div class="col-md-12">
+              <input
+                class="form-control"
+                type="password"
+                name="cpass"
+                placeholder="Confirm Password"
+                required
+              />
+              <div class="valid-feedback">Password field is valid!</div>
+              <div class="invalid-feedback">
+                Password field cannot be blank!
+              </div>
+            </div>
+
+            <div class="form-button mt-3">
+              <button id="button" type="submit" class="btn btn-primary">
+                Register
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
